--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "twinlife-webapp",
-  "version": "0.9.0",
+  "name": "mytwinlife-twinapp-ui",
+  "version": "0.9.1",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='../target/generated-web' react-scripts build",
+    "build": "BUILD_PATH=target/$npm_package_name-$npm_package_version react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
