--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
-  "name": "mytwinlife-twinapp-ui",
-  "version": "0.9.1",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.33",
-    "@types/react": "^17.0.29",
-    "@types/react-dom": "^17.0.9",
-    "@types/ws": "^8.5.3",
-    "axios": "^0.23.0",
-    "react": "^17.0.2",
-    "react-confirm-alert": "^2.7.0",
-    "react-dom": "^17.0.2",
-    "react-images-uploading": "^3.1.3",
-    "react-qr-code": "^2.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.9.4",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "BUILD_PATH=target/$npm_package_name-$npm_package_version react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "homepage": "https://call.mytwinlife.net/",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.3.1",
-    "@types/react-router-redux": "^5.0.20",
-    "prettier": "2.6.0"
-  }
+	"name": "mytwinlife-twinapp-ui",
+	"version": "0.9.2",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"start": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"axios": "^1.3.6",
+		"react": "^18.2.0",
+		"react-confirm-alert": "^3.0.6",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.10.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
+		"@vitejs/plugin-react": "^4.0.0-beta.0",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.38.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.3.4",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"prettier-plugin-organize-imports": "^3.2.2",
+		"prettier-plugin-tailwindcss": "^0.2.8",
+		"tailwindcss": "^3.3.1",
+		"typescript": "^5.0.2",
+		"vite": "^4.3.0"
+	}
 }
