--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
 		"start": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"translate": "node ./translations/translations.js"
 	},
 	"dependencies": {
 		"axios": "^1.3.6",
+		"i18next": "^22.5.0",
+		"i18next-browser-languagedetector": "^7.0.2",
 		"react": "^18.2.0",
 		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^12.3.1",
 		"react-router-dom": "^6.10.0"
 	},
 	"devDependencies": {
