--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"prettier-plugin-tailwindcss": "^0.2.8",
 		"tailwindcss": "^3.3.1",
 		"typescript": "^5.0.2",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vite-plugin-checker": "^0.6.0"
 	}
 }
