Feature #6: Configuration du projet

--- a/.env.skred
+++ b/.env.skred
@@ -1,4 +1,4 @@
-VITE_APP_NAME=twinme
+VITE_APP_NAME=Skred
 VITE_REST_URL=https://call.skred.mobi/rest
 VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
 VITE_PROXY_URL=wss://call.skred.mobi/p2p/connect
