Badges store links configuration

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ VITE_APP_NAME=TO_BE_REPLACED
 VITE_REST_URL=TO_BE_REPLACED
 VITE_INVITE_URL=TO_BE_REPLACED
 VITE_PROXY_URL=TO_BE_REPLACED
+
+VITE_STORE_IOS=TO_BE_REPLACED
+VITE_STORE_ANDROID=TO_BE_REPLACED
+VITE_STORE_MAC=TO_BE_REPLACED
+VITE_STORE_WINDOWS=TO_BE_REPLACED
