--- a/.env.skred
+++ b/.env.skred
@@ -2,3 +2,8 @@ VITE_APP_NAME=Skred
 VITE_REST_URL=https://call.skred.mobi/rest
 VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
 VITE_PROXY_URL=wss://call.skred.mobi/p2p/connect
+
+VITE_STORE_IOS=https://apps.apple.com/app/skred/id1201278426
+VITE_STORE_ANDROID=https://play.google.com/store/apps/details?id=mobi.skred.app
+VITE_STORE_MAC=https://apps.apple.com/app/skred-messenger-desktop/id1615070297
+VITE_STORE_WINDOWS=https://apps.microsoft.com/store/detail/skred-messenger-desktop/9N7NVZMW8GQB
