Configuration du projet #6

--- a/.env.skred
+++ b/.env.skred
@@ -1,4 +1,7 @@
 VITE_APP_NAME=Skred
+VITE_APP_WEBSITE=https://skred.mobi/
+VITE_APP_LOGO=skred.png
+
 VITE_REST_URL=https://call.skred.mobi/rest
 VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
 VITE_PROXY_URL=wss://call.skred.mobi/p2p/connect
