--- a/.env.twinme
+++ b/.env.twinme
@@ -1,4 +1,7 @@
 VITE_APP_NAME=twinme
+VITE_APP_WEBSITE=https://twin.me
+VITE_APP_LOGO=twinme.png
+
 VITE_REST_URL=https://call.twin.me/rest
 VITE_INVITE_URL="https://invite.twin.me?twincodeId="
 VITE_PROXY_URL=wss://call.twin.me/p2p/connect
