--- a/.env.mytwinlife
+++ b/.env.mytwinlife
@@ -1,4 +1,7 @@
 VITE_APP_NAME=twinme
+VITE_APP_WEBSITE=https://twin.me
+VITE_APP_LOGO=twinme.png
+
 VITE_REST_URL=https://call.mytwinlife.net/rest
 VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
 VITE_PROXY_URL=wss://call.mytwinlife.net/p2p/connec
