Feature #6: Configuration du projet
  Modified files:
    o .env.mytwinlife
      Fix websocket configuration.
    o package.json
      Change version to 1.0.2

--- a/.env.mytwinlife
+++ b/.env.mytwinlife
@@ -4,7 +4,7 @@ VITE_APP_LOGO=twinme.png
 
 VITE_REST_URL=https://call.mytwinlife.net/rest
 VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
-VITE_PROXY_URL=wss://call.mytwinlife.net/p2p/connec
+VITE_PROXY_URL=wss://call.mytwinlife.net/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/twinme-private-messenger/id889904498
 VITE_STORE_ANDROID=https://play.google.com/store/apps/details?id=org.twinlife.device.android.twinme
