Feature #9: Ecran post appel
Update thanks images for twinme & Skred

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
 VITE_APP_NAME=TO_BE_REPLACED
 VITE_APP_WEBSITE=TO_BE_REPLACED
 VITE_APP_LOGO=TO_BE_REPLACED
+VITE_APP_THANKS_IMAGE=TO_BE_REPLACED
 
 VITE_REST_URL=TO_BE_REPLACED
 VITE_INVITE_URL=TO_BE_REPLACED
