--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"translate": "node ./translations/translations.js"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.15",
+		"@heroicons/react": "^2.0.18",
 		"axios": "^1.3.6",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.2",
