--- a/.env.mytwinlife
+++ b/.env.mytwinlife
@@ -1,7 +1,7 @@
 VITE_APP_NAME=twinme
 VITE_APP_WEBSITE=https://twin.me
 VITE_APP_LOGO=twinme.png
-VITE_APP_THANKS_IMAGE=thanks_twinme.png
+VITE_APP_THANKS_IMAGE=thanks_twinme.webp
 
 VITE_REST_URL=https://call.mytwinlife.net/rest
 VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
