- Display when twincode.video == false - Fullscreen participant on mobile

--- a/.env.twinme
+++ b/.env.twinme
@@ -1,6 +1,7 @@
 VITE_APP_NAME=twinme
 VITE_APP_WEBSITE=https://twin.me
 VITE_APP_LOGO=twinme.png
+VITE_APP_LOGO_BIG=twinme-big.webp
 VITE_APP_THANKS_IMAGE=thanks_twinme.webp
 
 VITE_REST_URL=https://call.twin.me/rest
