--- a/.env.skred
+++ b/.env.skred
@@ -1,6 +1,7 @@
 VITE_APP_NAME=Skred
 VITE_APP_WEBSITE=https://skred.mobi/
 VITE_APP_LOGO=skred.png
+VITE_APP_LOGO_BIG=skred-big.webp
 VITE_APP_THANKS_IMAGE=thanks_skred.webp
 
 VITE_REST_URL=https://call.skred.mobi/rest
