--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"start": "vite",
 		"build": "tsc && vite build",
+		"build:twinme": "node scripts/publicAssets.js twinme && npm run build -- --mode twinme",
+		"build:skred": "node scripts/publicAssets.js skred && npm run build -- --mode skred",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"translate": "node ./translations/translations.js"
