Actualiser .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,11 +24,11 @@ steps:
 
   - name: Backup old folder
     commands: 
-      - mv /srv/call.skred.mobi/* /srv/call.skred.mobi.old && mv /srv/call.twin.me/* /srv/call.twin.me.old
+      - sudo mv /srv/call.skred.mobi/* /srv/call.skred.mobi.old && sudo mv /srv/call.twin.me/* /srv/call.twin.me.old
 
   - name: MEP
     commands: 
-      - mv server-webapp-ui/skred-webapp-ui/* /srv/call.skred.mobi/ && chown -R 1000:1000 /srv/call.skred.mobi && mv server-webapp-ui/twinme-webapp-ui/* /srv/call.twin.me/ && chown -R 1000:1000 /srv/call.twin.me
+      - sudo mv server-webapp-ui/skred-webapp-ui/* /srv/call.skred.mobi/ && sudo chown -R 1000:1000 /srv/call.skred.mobi && sudo mv server-webapp-ui/twinme-webapp-ui/* /srv/call.twin.me/ && sudo chown -R 1000:1000 /srv/call.twin.me
 
 trigger:
    branch:
