--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "mytwinlife-twinapp-ui",
-	"version": "1.1.2",
+	"version": "1.2.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
 		"start": "vite",
 		"build": "tsc && vite build",
-		"build:mytwinlife": "node scripts/publicAssets.js twinme && npm run build -- --mode mytwinlife",
-		"build:twinme": "node scripts/publicAssets.js twinme && npm run build -- --mode twinme",
-		"build:skred": "node scripts/publicAssets.js skred && npm run build -- --mode skred",
+		"build:mytwinlife": "node scripts/publicAssets.js twinme && npm run build -- --mode mytwinlife && mv dist mytwinlife-webapp-ui",
+		"build:twinme": "node scripts/publicAssets.js twinme && npm run build -- --mode twinme && mv dist twinme-webapp-ui",
+		"build:skred": "node scripts/publicAssets.js skred && npm run build -- --mode skred && mv dist skred-webapp-ui",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"translate": "node ./translations/translations.js"
