Bug #26: Le bouton "Transfer" est affiché pendant un appel "click-to-call"
  Modified files:
    o .env.mytwinlife
    o .env.skred
    o .env.twinme
      Set VITE_APP_TRANSFER=false
    o README.md
      Add explanation for VITE_APP_TRANSFER
    o package.json
      Add new build targets build:mytwinlife:transfer,
      build:twinme:transfer, build:skred:transfer
      Update to use the vite option --outDir <path>
    o src/pages/Call.tsx
      Add APP_TRANSFER constant and use it to enable/disable
      the display of the inCall transfer block.
    o src/vite-env.d.ts
      Add declaration for VITE_APP_TRANSFER

  New files:
    o .env.mytwinlife-transfer
    o .env.skred-transfer
    o .env.twinme-transfer
      Add configuration for https://transfer.* applications.

--- a/.env.mytwinlife-transfer
+++ b/.env.mytwinlife-transfer
@@ -3,11 +3,11 @@ VITE_APP_WEBSITE=https://twin.me
 VITE_APP_LOGO=twinme.png
 VITE_APP_LOGO_BIG=twinme-big.webp
 VITE_APP_THANKS_IMAGE=thanks_twinme.webp
-VITE_APP_TRANSFER=false
+VITE_APP_TRANSFER=true
 
-VITE_REST_URL=https://call.mytwinlife.net/rest
+VITE_REST_URL=https://transfer.mytwinlife.net/rest
 VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
-VITE_PROXY_URL=wss://call.mytwinlife.net/p2p/connect
+VITE_PROXY_URL=wss://transfer.mytwinlife.net/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/twinme-private-messenger/id889904498
 VITE_STORE_ANDROID=https://play.google.com/store/apps/details?id=org.twinlife.device.android.twinme
