--- a/.env.skred-transfer
+++ b/.env.skred-transfer
@@ -3,11 +3,11 @@ VITE_APP_WEBSITE=https://skred.mobi/
 VITE_APP_LOGO=skred.png
 VITE_APP_LOGO_BIG=skred-big.webp
 VITE_APP_THANKS_IMAGE=thanks_skred.webp
-VITE_APP_TRANSFER=false
+VITE_APP_TRANSFER=true
 
-VITE_REST_URL=https://call.skred.mobi/rest
+VITE_REST_URL=https://transfer.skred.mobi/rest
 VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
-VITE_PROXY_URL=wss://call.skred.mobi/p2p/connect
+VITE_PROXY_URL=wss://transfer.skred.mobi/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/skred/id1201278426
 VITE_STORE_ANDROID=https://play.google.com/store/apps/details?id=mobi.skred.app
