--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@headlessui/react": "^1.7.15",
 		"@heroicons/react": "^2.0.18",
 		"axios": "^1.3.6",
+		"date-fns": "^2.30.0",
+		"date-fns-tz": "^2.0.0",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.2",
 		"react": "^18.2.0",
