--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VITE_APP_WEBSITE=TO_BE_REPLACED
 VITE_APP_LOGO=TO_BE_REPLACED
 VITE_APP_LOGO_BIG=TO_BE_REPLACED
 VITE_APP_THANKS_IMAGE=TO_BE_REPLACED
+VITE_APP_TRANSFER=TO_BE_REPLACED
 
 VITE_REST_URL=TO_BE_REPLACED
 VITE_INVITE_URL=TO_BE_REPLACED
