--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"date-fns-tz": "^2.0.0",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.2",
+		"qrcode": "^1.5.3",
 		"react": "^18.2.0",
 		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.2.0",
@@ -32,6 +33,7 @@
 		"react-router-dom": "^6.10.0"
 	},
 	"devDependencies": {
+		"@types/qrcode": "^1.5.5",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
