--- a/.env.mytwinlife
+++ b/.env.mytwinlife
@@ -4,6 +4,7 @@ VITE_APP_LOGO=twinme.png
 VITE_APP_LOGO_BIG=twinme-big.webp
 VITE_APP_THANKS_IMAGE=thanks_twinme.webp
 VITE_APP_TRANSFER=false
+VITE_APP_DEBUG=true
 
 VITE_REST_URL=https://call.mytwinlife.net/rest
 VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
