--- a/.env.skred-transfer
+++ b/.env.skred-transfer
@@ -4,6 +4,7 @@ VITE_APP_LOGO=skred.png
 VITE_APP_LOGO_BIG=skred-big.webp
 VITE_APP_THANKS_IMAGE=thanks_skred.webp
 VITE_APP_TRANSFER=true
+VITE_APP_DEBUG=false
 
 VITE_REST_URL=https://transfer.skred.mobi/rest
 VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
