--- a/.env.twinme-transfer
+++ b/.env.twinme-transfer
@@ -4,6 +4,7 @@ VITE_APP_LOGO=twinme.png
 VITE_APP_LOGO_BIG=twinme-big.webp
 VITE_APP_THANKS_IMAGE=thanks_twinme.webp
 VITE_APP_TRANSFER=true
+VITE_APP_DEBUG=false
 
 VITE_REST_URL=https://transfer.twin.me/rest
 VITE_INVITE_URL="https://invite.twin.me?twincodeId="
