Feature #54: Mise à jour des liens des sites web.
  Modified files:
    o .env.mytwinlife
    o .env.skred
    o .env.skred-transfer
    o .env.twinme
    o .env.twinme-transfer
      Use https://www.twin.me and https://www.skred.app

--- a/.env.skred
+++ b/.env.skred
@@ -1,5 +1,5 @@
 VITE_APP_NAME=Skred
-VITE_APP_WEBSITE=https://skred.mobi/
+VITE_APP_WEBSITE=https://www.skred.app/
 VITE_APP_LOGO=skred.png
 VITE_APP_LOGO_BIG=skred-big.webp
 VITE_APP_THANKS_IMAGE=thanks_skred.webp
