--- a/.env.skred-transfer
+++ b/.env.skred-transfer
@@ -1,5 +1,5 @@
 VITE_APP_NAME=Skred
-VITE_APP_WEBSITE=https://skred.mobi/
+VITE_APP_WEBSITE=https://www.skred.app/
 VITE_APP_LOGO=skred.png
 VITE_APP_LOGO_BIG=skred-big.webp
 VITE_APP_THANKS_IMAGE=thanks_skred.webp
