--- a/.env.twinme-transfer
+++ b/.env.twinme-transfer
@@ -1,5 +1,5 @@
 VITE_APP_NAME=twinme
-VITE_APP_WEBSITE=https://twin.me
+VITE_APP_WEBSITE=https://www.twin.me
 VITE_APP_LOGO=twinme.png
 VITE_APP_LOGO_BIG=twinme-big.webp
 VITE_APP_THANKS_IMAGE=thanks_twinme.webp
