--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
         volumes:
             - '.:/opt/server-webapp-ui'
         entrypoint: /bin/bash
-        command: "-c 'npm install typescript && npm audit fix && npm run build:skred && npm run build:twinme'"
+        command: "-c 'npm install typescript && npm audit fix && npm run build:skred && npm run build:twinme && npm run build:skred:transfer && npm run build:twinme:transfer'"
         container_name: usine-webapp-twinlife
         image: 'harbor.skyrock.net/twinlife/usine-nodejs-webapp:latest'
