--- a/.drone.yml
+++ b/.drone.yml
@@ -33,6 +33,7 @@ steps:
   - name: MEP
     commands: 
       - sudo mv skred-webapp-ui/* /srv/call.skred.mobi/ && sudo chown -R 1000:1000 /srv/call.skred.mobi && sudo mv twinme-webapp-ui/* /srv/call.twin.me/ && sudo chown -R 1000:1000 /srv/call.twin.me
+      - sudo cp -rp /srv/call.skred.mobi/ /srv/transfer.skred.mobi/ && sudo cp -rp /srv/call.twin.me/ /srv/transfer.twin.me/
 
 trigger:
   event:
