le / de trop...

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,7 +49,7 @@ steps:
       - sudo mv skred-webapp-transfer/* /srv/transfer.skred.mobi/
       - sudo chown -R 1000:1000 /srv/transfer.skred.mobi
       - sudo mv twinme-webapp-transfer/* /srv/transfer.twin.me/
-      - sudo chown -R 1000:1000 /srv/transfer.twin.me/
+      - sudo chown -R 1000:1000 /srv/transfer.twin.me
 
 trigger:
   event:
