--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"date-fns-tz": "^2.0.0",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.2",
+		"lucide-react": "^0.379.0",
 		"qrcode": "^1.5.3",
 		"react": "^18.2.0",
 		"react-confirm-alert": "^3.0.6",
