--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
 		"autoprefixer": "^10.4.14",
+		"clsx": "^2.1.1",
 		"eslint": "^8.38.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
