Feature #71: Mise à jour de certains composants
  Modified files:
    o README.md
    o package-lock.json
    o package.json
      Upgrade eslint, axios, react, typescript, vite, ...
      (without breaking major version)

  Moved:
    o .eslintrc.yml -> eslint.config.mjs

--- a/package.json
+++ b/package.json
@@ -12,46 +12,48 @@
 		"build:mytwinlife:transfer": "node scripts/publicAssets.js twinme && npm run build -- --mode mytwinlife-transfer --outDir mytwinlife-webapp-transfer",
 		"build:twinme:transfer": "node scripts/publicAssets.js twinme && npm run build -- --mode twinme-transfer --outDir twinme-webapp-transfer",
 		"build:skred:transfer": "node scripts/publicAssets.js skred && npm run build -- --mode skred-transfer --outDir skred-webapp-transfer",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives",
+		"lint": "eslint src --report-unused-disable-directives",
 		"preview": "vite preview",
 		"translate": "node ./translations/translations.js",
 		"prettier": "prettier --config ./.prettierrc --write \"src/**/*.{ts,tsx,json}\""
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.7.15",
-		"@heroicons/react": "^2.0.18",
-		"axios": "^1.3.6",
+		"@eslint/compat": "^1.2.6",
+		"@headlessui/react": "^1.7.19",
+		"@heroicons/react": "^2.2.0",
+		"axios": "^1.7.9",
 		"date-fns": "^2.30.0",
-		"date-fns-tz": "^2.0.0",
-		"i18next": "^22.5.0",
-		"i18next-browser-languagedetector": "^7.0.2",
+		"date-fns-tz": "^2.0.1",
+		"globals": "^15.15.0",
+		"i18next": "^22.5.1",
+		"i18next-browser-languagedetector": "^7.2.2",
 		"lucide-react": "^0.379.0",
-		"qrcode": "^1.5.3",
-		"react": "^18.2.0",
+		"qrcode": "^1.5.4",
+		"react": "^18.3.0",
 		"react-confirm-alert": "^3.0.6",
-		"react-dom": "^18.2.0",
+		"react-dom": "^18.3.1",
 		"react-i18next": "^12.3.1",
-		"react-router-dom": "^6.10.0"
+		"react-router-dom": "^6.29.0"
 	},
 	"devDependencies": {
-		"@types/qrcode": "^1.5.5",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
-		"@vitejs/plugin-basic-ssl": "^1.0.1",
-		"@vitejs/plugin-react": "^4.0.0-beta.0",
-		"autoprefixer": "^10.4.14",
+                "@types/qrcode": "^1.5.5",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
+		"@typescript-eslint/eslint-plugin": "^8.24.0",
+		"@typescript-eslint/parser": "^8.24.0",
+                "@vitejs/plugin-basic-ssl": "^1.0.1",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
-		"eslint": "^8.38.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
+		"eslint": "^9.20.1",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
 		"postcss": "^8.4.23",
-		"prettier": "^2.8.8",
-		"prettier-plugin-organize-imports": "^3.2.2",
+		"prettier": "^3.5.1",
+		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-tailwindcss": "^0.2.8",
 		"tailwindcss": "^3.3.1",
-		"typescript": "^5.4.2",
-		"vite": "^4.3.0"
+		"typescript": "^5.7.3",
+		"vite": "^6.1.0"
 	}
 }
