--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.3'
 services:
     usine-webapp-twinlife:
         volumes:
-            - '.:/opt/server-webapp-ui'
+            - '.:/opt/nodejs'
         entrypoint: /bin/bash
-        command: "-c 'npm install typescript && npm audit fix && npm run build:skred && npm run build:twinme && npm run build:skred:transfer && npm run build:twinme:transfer'"
+        command: "-c 'npm install typescript && npm run build:skred && npm run build:twinme && npm run build:skred:transfer && npm run build:twinme:transfer'"
         container_name: usine-webapp-twinlife
-        image: 'harbor.skyrock.net/twinlife/usine-nodejs-webapp:latest'
+        image: 'harbor.skyrock.net/twinlife/usine-nodejs-webapp:22'
