--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
         volumes:
             - '.:/opt/nodejs'
         entrypoint: /bin/bash
-        command: "-c 'npm install typescript && npm run build:skred && npm run build:twinme && npm run build:skred:transfer && npm run build:twinme:transfer'"
+        command: "-c 'npm install typescript && npm audit --audit-level=critical && npm run build:skred && npm run build:twinme && npm run build:skred:transfer && npm run build:twinme:transfer'"
         container_name: usine-webapp-twinlife
         image: 'harbor.skyrock.net/twinlife/usine-nodejs-webapp:22'
