--- a/.drone.yml
+++ b/.drone.yml
@@ -10,13 +10,6 @@ server:
 
 steps:
 
-  - name: remove old configuration folder
-    commands:
-      - sudo rm -rf /srv/call.skred.mobi.old
-      - sudo rm -rf /srv/call.twin.me.old
-      - sudo rm -rf /srv/transfer.skred.mobi.old
-      - sudo rm -rf /srv/transfer.twin.me.old
-
   - name: start docker-compose
     commands:
       - HOME=/home/drone-ci && docker pull harbor.skyrock.net/twinlife/usine-nodejs-webapp:22 && docker compose up
@@ -31,25 +24,27 @@ steps:
 
   - name: Backup old folder
     commands: 
-      - sudo mv /srv/call.skred.mobi /srv/call.skred.mobi.old
-      - sudo mv /srv/call.twin.me /srv/call.twin.me.old
-      - sudo mv /srv/transfer.skred.mobi /srv/transfer.skred.mobi.old
-      - sudo mv /srv/transfer.twin.me /srv/transfer.twin.me.old
+      - sudo mv /opt/call.skred/apache-webapp-skred/call.skred.mobi /opt/call.skred/apache-webapp-skred/call.skred.mobi.old
+      - sudo mv /opt/call.twinme/apache-webapp-twinme/call.twin.me /opt/call.twinme/apache-webapp-twinme/call.twin.me.old
+      - sudo mv /opt/call.skred/apache-webapp-skred/transfer.skred.mobi /opt/call.skred/apache-webapp-skred/transfer.skred.mobi.old
+      - sudo mv /opt/call.twinme/apache-webapp-twinme/transfer.twin.me /opt/call.twinme/apache-webapp-twinme/transfer.twin.me.old
 
   - name: MEP
     commands: 
-      - sudo mkdir -p /srv/call.skred.mobi
-      - sudo mkdir -p /srv/call.twin.me
-      - sudo mkdir -p /srv/transfer.skred.mobi
-      - sudo mkdir -p /srv/transfer.twin.me
-      - sudo mv skred-webapp-ui/* /srv/call.skred.mobi/
-      - sudo chown -R 1000:1000 /srv/call.skred.mobi
-      - sudo mv twinme-webapp-ui/* /srv/call.twin.me/
-      - sudo chown -R 1000:1000 /srv/call.twin.me
-      - sudo mv skred-webapp-transfer/* /srv/transfer.skred.mobi/
-      - sudo chown -R 1000:1000 /srv/transfer.skred.mobi
-      - sudo mv twinme-webapp-transfer/* /srv/transfer.twin.me/
-      - sudo chown -R 1000:1000 /srv/transfer.twin.me
+      - sudo mkdir -p /opt/call.skred/apache-webapp-skred/call.skred.mobi
+      - sudo mkdir -p /opt/call.twinme/apache-webapp-twinme/call.twin.me
+      - sudo mkdir -p /opt/call.skred/apache-webapp-skred/transfer.skred.mobi
+      - sudo mkdir -p /opt/call.twinme/apache-webapp-twinme/transfer.twin.me
+      - sudo mv skred-webapp-ui/* /opt/call.skred/apache-webapp-skred/call.skred.mobi
+      - sudo chown -R 1000:1000 /opt/call.skred/apache-webapp-skred/call.skred.mobi
+      - sudo mv twinme-webapp-ui/* /opt/call.twinme/apache-webapp-twinme/call.twin.me
+      - sudo chown -R 1000:1000 /opt/call.twinme/apache-webapp-twinme/call.twin.me
+      - sudo mv skred-webapp-transfer/* /opt/call.skred/apache-webapp-skred/transfer.skred.mobi
+      - sudo chown -R 1000:1000 /opt/call.skred/apache-webapp-skred/transfer.skred.mobi
+      - sudo mv twinme-webapp-transfer/* /opt/call.twinme/apache-webapp-twinme/transfer.twin.me
+      - sudo chown -R 1000:1000 /opt/call.twinme/apache-webapp-twinme/transfer.twin.me
+      - sudo docker compose -f /opt/call.twinme/docker-compose.yml restart apache-webapp-twinme
+      - sudo docker compose -f /opt/call.skred/docker-compose.yml restart apache-webapp-skred
 
 trigger:
   event:
