--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
 		"react": "^18.3.0",
 		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.3.1",
+		"react-draggable": "^4.4.6",
 		"react-i18next": "^12.3.1",
 		"react-router-dom": "^6.29.0"
 	},
 	"devDependencies": {
-                "@types/qrcode": "^1.5.5",
+		"@types/qrcode": "^1.5.5",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
-                "@vitejs/plugin-basic-ssl": "^1.0.1",
 		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
