--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"react-dom": "^18.3.1",
 		"react-draggable": "^4.4.6",
 		"react-i18next": "^12.3.1",
-		"react-router-dom": "^6.29.0"
+		"react-router-dom": "^6.29.0",
+		"vite-plugin-svgr": "^4.3.0"
 	},
 	"devDependencies": {
 		"@types/qrcode": "^1.5.5",
