Cleanup sources and update invitation links

--- a/.env.skred
+++ b/.env.skred
@@ -7,7 +7,7 @@ VITE_APP_TRANSFER=false
 VITE_APP_DEBUG=false
 
 VITE_REST_URL=https://call.skred.mobi/rest
-VITE_INVITE_URL="https://invite.skred.mobi?skredcodeId="
+VITE_INVITE_URL="https://invite.skred.mobi/?skredcodeId="
 VITE_PROXY_URL=wss://call.skred.mobi/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/skred/id1201278426
