--- a/.env.twinme
+++ b/.env.twinme
@@ -7,7 +7,7 @@ VITE_APP_TRANSFER=false
 VITE_APP_DEBUG=false
 
 VITE_REST_URL=https://call.twin.me/rest
-VITE_INVITE_URL="https://invite.twin.me?twincodeId="
+VITE_INVITE_URL="https://invite.twin.me/?twincodeId="
 VITE_PROXY_URL=wss://call.twin.me/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/twinme-private-messenger/id889904498
