--- a/.env.mytwinlife
+++ b/.env.mytwinlife
@@ -7,7 +7,7 @@ VITE_APP_TRANSFER=false
 VITE_APP_DEBUG=true
 
 VITE_REST_URL=https://call.mytwinlife.net/rest
-VITE_INVITE_URL="https://invite.mytwinlife.net?twincodeId="
+VITE_INVITE_URL="https://invite.mytwinlife.net/?twincodeId="
 VITE_PROXY_URL=wss://call.mytwinlife.net/p2p/connect
 
 VITE_STORE_IOS=https://apps.apple.com/app/twinme-private-messenger/id889904498
